--- a/index.html
+++ b/index.html
@@ -12,28 +12,36 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment"></script>  
 </head>
 <body>
-    <!-- Navbar -->
-    <div class="navbar">
-        <div class="leftBar">
-            <i class="fas fa-bars" id="sidebarToggle"></i>
-        </div>
-        <!-- <div style="width: 95%;"></div>
-        <div class="rightBar">
-            <i class="fas fa-search"></i>
-            <i class="fas fa-bell"></i>
-            <i class="fas fa-user"></i>
-        </div> -->
-    </div>
-    <!-- Sidebar -->
+
     <div class="sidebar" id="sidebar">
         <ul>
-            <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-            <li><a href="activity.html"><i class="fas fa-chart-line"></i> Activity</a></li>
-            <li><a href="profile.html"><i class="fas fa-user"></i> Profile</a></li>
-            <li><a href="logout.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+          <li>
+            <a href="index.html">
+              <i class="fas fa-home"></i>
+              <span>Home</span>
+            </a>
+          </li>
+          <li>
+            <a href="activity.html">
+              <i class="fas fa-chart-line"></i>
+              <span>Activity</span>
+            </a>
+          </li>
+          <li>
+            <a href="profile.html">
+              <i class="fas fa-user"></i>
+              <span>Profile</span>
+            </a>
+          </li>
+          <li>
+            <a href="logout.html">
+              <i class="fas fa-sign-out-alt"></i>
+              <span>Logout</span>
+            </a>
+          </li>
         </ul>
-    </div>
-
+      </div>
+      
     
     <div id ="content">
         <div class ="dashboard">
