--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <div class="sidebar" id="sidebar">
+        <i class="fas fa-bars" id="sidebarToggle"></i>
         <ul>
           <li>
             <a href="index.html">
