--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class ="dashboard">
                 <div class="overview-grid">
                     <div class="overview-card">
-                        <div class="card-icon"><i class="fas fa-chart-line"></i></div>
-                        <div class="card-value">42%</div>
-                        <div class="card-label">Weekly Progress</div>
+                        <div class="card-icon"><i class="fas fa-chart-clock"></i></div>
+                        <div class="card-value">4hours</div>
+                        <div class="card-label"> Progress</div>
                     </div>
                     <div class="overview-card">
                         <div class="card-icon"><i class="fas fa-fire"></i></div>
@@ -78,19 +78,19 @@
                         <div class="card-label"></div>
                     </div>
                     <div class="overview-card">
-                        <div class="card-icon"><i class="fas fa-clock"></i></div>
-                        <div class="card-value"></div>
-                        <div class="card-label"></div>
+                        <div class="card-icon"><i class="fas fa-bell"></i></div>
+                        <div class="card-value">5</div>
+                        <div class="card-label">Alerts</div>
                     </div>
                     <div class="overview-card">
-                        <div class="card-icon"><i class="fas fa-bed"></i></div>
-                        <div class="card-value">8 Hours</div>
-                        <div class="card-label">Sleeping Potency</div>
+                        <div class="card-icon"><i class="fas fa-calendar"></i></div>
+                        <div class="card-value">8 </div>
+                        <div class="card-label">Appointments</div>
                     </div>
                     <div class="overview-card">
-                        <div class="card-icon"><i class="fas fa-users"></i></div>
+                        <div class="card-icon"><i class="fas fa-download"></i></div>
                         <div class="card-value"></div>
-                        <div class="card-label"></div>
+                        <div class="card-label">Report</div>
                     </div>
                 </div>
     
