--- a/index.html
+++ b/index.html
@@ -68,15 +68,11 @@
         <div class ="dashboard">
                 <div class="overview-grid">
                     <div class="overview-card">
-                        <div class="card-icon"><i class="fas fa-chart-clock"></i></div>
-                        <div class="card-value">4hours</div>
+                        <div class="card-icon"><i class="fas fa-chart-chartline"></i></div>
+                        <div class="card-value">4 hours</div>
                         <div class="card-label"> Progress</div>
                     </div>
-                    <div class="overview-card">
-                        <div class="card-icon"><i class="fas fa-fire"></i></div>
-                        <div class="card-value">N/A</div>
-                        <div class="card-label"></div>
-                    </div>
+                
                     <div class="overview-card">
                         <div class="card-icon"><i class="fas fa-bell"></i></div>
                         <div class="card-value">5</div>
@@ -90,7 +86,7 @@
                     <div class="overview-card">
                         <div class="card-icon"><i class="fas fa-download"></i></div>
                         <div class="card-value"></div>
-                        <div class="card-label">Report</div>
+                        <div class="card-label">Generate Report</div>
                     </div>
                 </div>
     
