--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class ="dashboard">
                 <div class="overview-grid">
                     <div class="overview-card">
-                        <div class="card-icon"><i class="fas fa-chart-chartline"></i></div>
+                        <div class="card-icon"><i class="fas fa-chart-line"></i></div>
                         <div class="card-value">4 hours</div>
-                        <div class="card-label"> Progress</div>
+                        <div class="card-label"> Daily Progress</div>
                     </div>
                 
                     <div class="overview-card">
