--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                         <div class="card-icon"><i class="fas fa-bell"></i></div>
                         <div class="card-value">5</div>
                         <div class="card-label">Alerts</div>
+                        <script src = "fetch.js"></script>
                     </div>
                     <div class="overview-card">
                         <div class="card-icon"><i class="fas fa-calendar"></i></div>
