--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 </a>
               </li>
               <li>
-                <a href="profile.html">
+                <a href="user.html">
                   <i class="fas fa-user"></i>
-                  <span>Profile</span>
+                  <span>Users</span>
                 </a>
               </li>
               <li>
@@ -121,8 +121,7 @@
     </div>
     </div>
     <script src="sidebar.js"></script>
-    <script src="updateTime.js"></script>
-   
+
     
    
 </body>
