--- a/user.html
+++ b/user.html
@@ -55,7 +55,7 @@
           </div>
     </div>
 
-    <div class = "content">
+    <div id = "content">
         <div class = "header">
             <h1>Users</h1>
         </div>
