User and Alert pages created and linked

--- a/alert.html
+++ b/alert.html
@@ -57,21 +57,22 @@
 
     <div id = "content">
         <div class = "header">
-            <h1>Users</h1>
+            <h1>Alerts</h1>
         </div>
-        <div class = "user-table">
-            <table id="userTable">
+        <div class = "alert-table">
+            <table id="alertTable">
                 <tr>
                     <th>ID</th>
-                    <th>Name</th>
                     <th>Brace ID</th>
-                    <th>Email</th>
+                    <th>Alert Code</th>
+                    <th>Message</th>
+                    <th>Time</th>
 
                 </tr>
                 <tbody>
 
                 </tbody>
-                <script src="userhistory.js"></script>
+                <script src="alertTable.js"></script>
             </table>
 </body>
 </html>
