--- a/alert.html
+++ b/alert.html
@@ -61,14 +61,17 @@
         </div>
         <div class = "alert-table">
             <table id="alertTable">
+              <thead>
                 <tr>
-                    <th>ID</th>
-                    <th>Brace ID</th>
-                    <th>Alert Code</th>
-                    <th>Message</th>
-                    <th>Time</th>
+                  <th>ID</th>
+                  <th>Brace ID</th>
+                  <th>Alert Code</th>
+                  <th>Message</th>
+                  <th>Time</th>
 
-                </tr>
+              </tr>
+              </thead>
+                
                 <tbody>
 
                 </tbody>
