--- a/user.html
+++ b/user.html
@@ -61,6 +61,7 @@
         </div>
         <div class = "user-table">
             <table id="userTable">
+                <thead>
                 <tr>
                     <th>ID</th>
                     <th>Name</th>
@@ -68,6 +69,7 @@
                     <th>Email</th>
 
                 </tr>
+                </thead>
                 <tbody>
 
                 </tbody>
