--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </a>
               </li>
               <li>
-                <a href="alerts.html">
+                <a href="alert.html">
                   <i class="fas fa-bell"></i>
                   <span>Alerts</span>
                 </a>
@@ -65,6 +65,7 @@
       
     
     <div id ="content">
+      <h1 style="margin-bottom: 0;", style="margin-top: 10px">HealStep Dashboard </h1>
         <div class ="dashboard">
                 <div class="overview-grid">
                     <div class="overview-card" >
