--- a/alert.html
+++ b/alert.html
@@ -34,7 +34,7 @@
                 </a>
               </li>
               <li>
-                <a href="alerts.html">
+                <a href="alert.html">
                   <i class="fas fa-bell"></i>
                   <span>Alerts</span>
                 </a>
