--- a/test.html
+++ b/test.html
@@ -110,8 +110,9 @@
                 </div>
 
                 <!-- Today's Schedule -->
-                <div class="today-schedule">
-                    <h2>Today</h2>
+                <div class="update">
+                   
+                    <h2></h2>
                     <ul>
                         <li><strong>2:00 PM</strong> Meeting with Dr. Williams</li>
                         <li><strong>1:30 PM</strong> Consultation with Mr. White</li>
@@ -121,7 +122,15 @@
                     </ul>
                 </div>
             </div>
+            <footer class="footer">
+                <div class="footer-content">
+                    <img src="Images/logo.png" alt="HealStep Logo" class="footer-logo">
+                    <p>&copy; 2025 KneeSync. All rights reserved.</p>
+                </div>
+            </footer>
         </div>
+        
+
     </div>
 
     <script src="javascript/sidebar.js"></script>
