--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="loginform">
                 <form id="form">
                     <div class="displayIcon">
-                        <img src="images/logo.png" alt="Logo" class="logo">
+                        <img src="Images/logo.png" alt="Logo" class="logo">
                     </div>
                     <span class="loginTitle">Login</span>
                     
