--- a/alert.html
+++ b/alert.html
@@ -75,6 +75,7 @@
                     <option value="alertCode">Alert Code</option>
                     <option value="message">Message</option>
                     <option value="time">Time</option>
+                    <option value="date">Date</option>
                 </select>
                 <button onclick="filterTable()"><i class="fas fa-search"></i></button>
             </div>
@@ -104,6 +105,7 @@
                         <th>Brace ID</th>
                         <th>Alert Code</th>
                         <th>Message</th>
+                        <th>Date</th>
                         <th>Time</th>
                     </tr>
                 </thead>
