--- a/home.html
+++ b/home.html
@@ -23,12 +23,12 @@
           <span>Menu</span>
       </div>
       <ul>
-          <li><a href="index.html"><i class="fas fa-home"></i><span>Home</span></a></li>
+          <li><a href="home.html"><i class="fas fa-home"></i><span>Home</span></a></li>
           <li><a href="activity.html"><i class="fas fa-chart-line"></i><span>Activity</span></a></li>
           <li><a href="user.html"><i class="fas fa-user"></i><span>Users</span></a></li>
           <li><a href="alert.html"><i class="fas fa-bell"></i><span>Alerts</span></a></li>
           <li><a href="settings.html"><i class="fas fa-cog"></i><span>Settings</span></a></li>
-          <li><a href="logout.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a></li>
+          <li><a href="index.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a></li>
       </ul>
             <script src="javascript/sidebar.js"></script>
           </div>
