--- a/updathome.html
+++ b/updathome.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c998d5e9cf.js" crossorigin="anonymous"></script>
     <title>KneeSync Dashboard</title>
-    <link rel="icon" href="Images/logo.png"> 
-    <link rel="stylesheet" href="css/sidebar.css"> 
-    <link rel="stylesheet" href="/css/home.css"> <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/chart.umd.js"></script>
+    <link rel="icon" href="Images/logo.png"> <link rel="stylesheet" href="css/sidebar.css"> <link rel="stylesheet" href="updatehome.css"> <script src="https://cdn.jsdelivr.net/npm/chart.js@latest/dist/chart.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/moment"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-moment"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" href="Images/logo.png">
-
+    <link rel="stylesheet" href="updatehome.css">
 </head>
 <body>
     <div class="sidebar" id="sidebar">
@@ -23,7 +21,7 @@
             <span>Menu</span>
         </div>
         <ul>
-            <li><a href="home.html"><i class="fas fa-home"></i><span>Home</span></a></li>
+            <li><a href="index.html"><i class="fas fa-home"></i><span>Home</span></a></li>
             <li><a href="activity.html"><i class="fas fa-chart-line"></i><span>Activity</span></a></li>
             <li><a href="user.html"><i class="fas fa-user"></i><span>Users</span></a></li>
             <li><a href="alert.html"><i class="fas fa-bell"></i><span>Alerts</span></a></li>
@@ -117,6 +115,6 @@
     </div>
 
     <script src="javascript/sidebar.js"></script>
-    <script src="javascript/home.js"></script>
+    <script src="updatehome.js"></script>
 </body>
 </html>
