--- a/alert.html
+++ b/alert.html
@@ -21,7 +21,7 @@
         </div>
         <ul>
             <li>
-                <a href="index.html">
+                <a href="home.html">
                     <i class="fas fa-home"></i>
                     <span>Home</span>
                 </a>
