--- a/alert.html
+++ b/alert.html
@@ -51,7 +51,7 @@
                 </a>
             </li>
             <li>
-                <a href="logout.html">
+                <a href="index.html">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>Logout</span>
                 </a>
@@ -105,7 +105,7 @@
                         <th>Brace ID</th>
                         <th>Alert Code</th>
                         <th>Message</th>
-                        <th>Date</th>
+                        <!-- <th>Date</th> -->
                         <th>Time</th>
                     </tr>
                 </thead>
