--- a/activity.html
+++ b/activity.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="css/tables.css">
     <link rel="stylesheet" href="css/sidebar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-    <link rel="stylesheet" href="css/activity.css">
-    <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="css/tables.css">
+
     
 </head>
 <body>
