--- a/settings.html
+++ b/settings.html
@@ -6,76 +6,92 @@
     <title>KneeSync Settings</title>
     <link rel="icon" href="Images/logo.png">
     <link rel="stylesheet" href="css/settings.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+    <link rel="stylesheet" href="sidebar.css">
 </head>
 <body>
-    <div class="settings-overlay">
-        <div class="settings-popup">
-            <div class="settings-header">
-                <button class="close-btn" onclick="closeSettings()">&times;</button>
-                <h2>Device Settings</h2>
-                <p>Configure ROM thresholds for your KneeSync device</p>
+    <div class="sidebar" id="sidebar">
+        <div id="sidebarToggle" class="sidebarToggle">
+                <i class="fas fa-bars"></i>
+                <span>Menu</span>
             </div>
-            
-            <div class="settings-body">
-                <form id="settingsForm">
-                    <div class="form-group">
-                        <label for="deviceSelect">Select Device</label>
-                        <select id="deviceSelect" class="form-select" required>
-                            <option value="">Loading devices...</option>
-                        </select>
-                    </div>
+            <ul>
+                <li><a href="home.html"><i class="fas fa-home"></i><span>Home</span></a></li>
+                <li><a href="activity.html"><i class="fas fa-chart-line"></i><span>Activity</span></a></li>
+                <li><a href="user.html"><i class="fas fa-user"></i><span>Users</span></a></li>
+                <li><a href="alert.html"><i class="fas fa-bell"></i><span>Alerts</span></a></li>
+                <li><a href="settings.html"><i class="fas fa-cog"></i><span>Settings</span></a></li>
+                <li><a href="index.html"><i class="fas fa-sign-out-alt"></i><span>Logout</span></a></li>
+            </ul>
+        <div class="settings-overlay">
+            <div class="settings-popup">
+                <div class="settings-header">
+                    <button class="close-btn" onclick="closeSettings()">&times;</button>
+                    <h2>Device Settings</h2>
+                    <p>Configure ROM thresholds for your KneeSync device</p>
+                </div>
+                
+                <div class="settings-body">
+                    <form id="settingsForm">
+                        <div class="form-group">
+                            <label for="deviceSelect">Select Device</label>
+                            <select id="deviceSelect" class="form-select" required>
+                                <option value="">Loading devices...</option>
+                            </select>
+                        </div>
 
-                    <div class="current-settings" id="currentSettings" style="display: none;">
-                        <h4>Current Settings</h4>
-                        <div class="current-values">
-                            <div class="current-value">
-                                <div class="label">Lower Threshold</div>
-                                <div class="value" id="currentLower">--°</div>
-                            </div>
-                            <div class="current-value">
-                                <div class="label">Upper Threshold</div>
-                                <div class="value" id="currentUpper">--°</div>
+                        <div class="current-settings" id="currentSettings" style="display: none;">
+                            <h4>Current Settings</h4>
+                            <div class="current-values">
+                                <div class="current-value">
+                                    <div class="label">Lower Threshold</div>
+                                    <div class="value" id="currentLower">--°</div>
+                                </div>
+                                <div class="current-value">
+                                    <div class="label">Upper Threshold</div>
+                                    <div class="value" id="currentUpper">--°</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label>ROM Angle Thresholds</label>
-                        <div class="angle-inputs">
-                            <div class="angle-input-group">
-                                <input type="number" id="lowerThreshold" class="form-input" 
-                                       placeholder="Lower" min="0" max="180" step="0.1" required>
-                                <span class="angle-unit">°</span>
-                            </div>
-                            <div class="angle-input-group">
-                                <input type="number" id="upperThreshold" class="form-input" 
-                                       placeholder="Upper" min="0" max="180" step="0.1" required>
-                                <span class="angle-unit">°</span>
+                        <div class="form-group">
+                            <label>ROM Angle Thresholds</label>
+                            <div class="angle-inputs">
+                                <div class="angle-input-group">
+                                    <input type="number" id="lowerThreshold" class="form-input" 
+                                        placeholder="Lower" min="0" max="180" step="0.1" required>
+                                    <span class="angle-unit">°</span>
+                                </div>
+                                <div class="angle-input-group">
+                                    <input type="number" id="upperThreshold" class="form-input" 
+                                        placeholder="Upper" min="0" max="180" step="0.1" required>
+                                    <span class="angle-unit">°</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label for="contactInfo">Contact Information</label>
-                        <input type="text" id="contactInfo" class="form-input" 
-                               placeholder="Enter contact details" required>
-                    </div>
+                        <div class="form-group">
+                            <label for="contactInfo">Contact Information</label>
+                            <input type="text" id="contactInfo" class="form-input" 
+                                placeholder="Enter contact details" required>
+                        </div>
 
-                    <div class="settings-actions">
-                        <button type="button" class="btn btn-secondary" onclick="closeSettings()">
-                            Cancel
-                        </button>
-                        <button type="submit" class="btn btn-primary" id="saveBtn">
-                            Save Settings
-                        </button>
-                    </div>
+                        <div class="settings-actions">
+                            <button type="button" class="btn btn-secondary" onclick="closeSettings()">
+                                Cancel
+                            </button>
+                            <button type="submit" class="btn btn-primary" id="saveBtn">
+                                Save Settings
+                            </button>
+                        </div>
 
-                    <div id="statusMessage" class="status-message" style="display: none;"></div>
-                </form>
+                        <div id="statusMessage" class="status-message" style="display: none;"></div>
+                    </form>
+                </div>
+            </div>
             </div>
         </div>
     </div>
-
     <script src ="javascript/settings.js"></script>
 </body>
 </html>
