--- a/activity.html
+++ b/activity.html
@@ -116,6 +116,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script scr = "javascript/activity.js"></script>  
+    <script src = "javascript/activity.js"></script>  
 </body>
 </html>
